--- a/Picturedom/requirements.txt
+++ b/Picturedom/requirements.txt
@@ -1,11 +1,14 @@
 asgiref==3.6.0
 backports.zoneinfo==0.2.1
 coverage==5.5
+dj-database-url==2.3.0
 Django==4.2.3
 django-cleanup==5.2.0
 django-crispy-forms==1.12.0
 Pillow==9.3.0
 psycopg2-binary==2.9.1
+python-decouple==3.8
 pytz==2021.1
 sqlparse==0.4.4
+typing-extensions==4.12.2
 tzdata==2023.3
