--- a/Picturedom/requirements.txt
+++ b/Picturedom/requirements.txt
@@ -5,6 +5,8 @@ dj-database-url==2.3.0
 Django==4.2.3
 django-cleanup==5.2.0
 django-crispy-forms==1.12.0
+gunicorn==23.0.0
+packaging==24.2
 Pillow==9.3.0
 psycopg2-binary==2.9.1
 python-decouple==3.8
