--- a/Picturedom/requirements.txt
+++ b/Picturedom/requirements.txt
@@ -1,5 +1,5 @@
 asgiref==3.6.0
-backports.zoneinfo==0.2.1;python_version<"3.9"
+backports.zoneinfo==0.2.1;python_version<"3.9";
 coverage==5.5
 dj-database-url==2.3.0
 Django==4.2.3
@@ -8,7 +8,7 @@ django-crispy-forms==1.12.0
 gunicorn==23.0.0
 packaging==24.2
 Pillow==9.3.0
-psycopg2-binary==2.9.1
+psycopg2-binary==2.9.10
 python-decouple==3.8
 pytz==2021.1
 sqlparse==0.4.4
