--- a/Picturedom/requirements.txt
+++ b/Picturedom/requirements.txt
@@ -1,5 +1,5 @@
 asgiref==3.6.0
-backports.zoneinfo==0.2.1;python_version<"3.9";
+backports.zoneinfo==0.2.1;python_version<"3.9"
 coverage==5.5
 dj-database-url==2.3.0
 Django==4.2.3
