--- a/Picturedom/.env.example
+++ b/Picturedom/.env.example
@@ -11,3 +11,8 @@ DB_URL=
 DEBUG=
 SECRET_KEY=
 ALLOWED_HOSTS='localhost 127.0.0.1'
+
+# Cloudinary
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
