--- a/Picturedom/requirements.txt
+++ b/Picturedom/requirements.txt
@@ -1,16 +1,27 @@
 asgiref==3.6.0
 backports.zoneinfo; python_version < "3.9"
+certifi==2025.4.26
+charset-normalizer==3.4.2
+cloudinary==1.44.0
 coverage==5.5
 dj-database-url==2.3.0
 Django==4.2.3
 django-cleanup==5.2.0
+django-cloudinary-storage==0.3.0
 django-crispy-forms==1.12.0
 gunicorn==23.0.0
+idna==3.10
 packaging==24.2
 Pillow==9.3.0
 psycopg2-binary==2.9.10
 python-decouple==3.8
 pytz==2021.1
+requests==2.32.3
+setuptools==80.3.0
+six==1.17.0
 sqlparse==0.4.4
-typing-extensions==4.12.2
+typing_extensions==4.12.2
 tzdata==2023.3
+urllib3==2.4.0
+wheel==0.45.1
+whitenoise==6.9.0
