--- a/Picturedom/Dockerfile.prod
+++ b/Picturedom/Dockerfile.prod
@@ -8,6 +8,13 @@ WORKDIR /app
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
+ARG SECRET_KEY
+ARG DEBUG
+ARG DB_URL
+ENV SECRET_KEY=${SECRET_KEY}
+ENV DEBUG=${DEBUG}
+ENV DB_URL=${DB_URL}
+
 # Copy app code
 COPY . .
 
