--- a/Picturedom/.env.example
+++ b/Picturedom/.env.example
@@ -12,7 +12,8 @@ DB_URL=
 # Other
 DEBUG=
 SECRET_KEY=
-ALLOWED_HOSTS='localhost 127.0.0.1'
+ALLOWED_HOSTS='localhost,127.0.0.1'
+CSRF_TRUSTED_ORIGINS='http://localhost,http://something.else.com'
 
 # Cloudinary
 CLOUDINARY_CLOUD_NAME=
