--- a/Picturedom/Dockerfile.prod
+++ b/Picturedom/Dockerfile.prod
@@ -12,10 +12,12 @@ ARG SECRET_KEY
 ARG DEBUG
 ARG DB_URL
 ARG ALLOWED_HOSTS
+ARG CSRF_TRUSTED_ORIGINS
 ENV SECRET_KEY=${SECRET_KEY}
 ENV DEBUG=${DEBUG}
 ENV DB_URL=${DB_URL}
 ENV ALLOWED_HOSTS=${ALLOWED_HOSTS}
+ENV CSRF_TRUSTED_ORIGINS=${CSRF_TRUSTED_ORIGINS}
 
 # Copy app code
 COPY . .
