--- a/Picturedom/docker-compose.yml
+++ b/Picturedom/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3'
 services:
     django_app:
         build: .
@@ -11,7 +10,7 @@ services:
         volumes:
             - media:/app/media
     postgres:
-        image: postgres
+        image: postgres:17
         container_name: postgres
         ports:
             - 5432:5432
@@ -21,7 +20,17 @@ services:
             - POSTGRES_PASSWORD=postgres
         volumes:
             - postgresql_data:/var/lib/postgresql/data
-
+    pgadmin:
+        image: dpage/pgadmin4
+        container_name: pgadmin
+        restart: always
+        ports:
+        - "8080:80"  # access pgAdmin at http://localhost:8080
+        environment:
+            PGADMIN_DEFAULT_EMAIL: admin@admin.com
+            PGADMIN_DEFAULT_PASSWORD: admin
+        depends_on:
+            - postgres
 volumes:
     media:
     postgresql_data:
